fixes and updates

--- a/language/german/email/request_status_change.html
+++ b/language/german/email/request_status_change.html
@@ -1,5 +1,5 @@
 <p>Hallo {USERNAME},</p>
-<p>der Status beiner Bewerbung bei &quot;{GUILDTAG}&quot; wurde geändert auf:</p>
+<p>der Status deiner Bewerbung bei &quot;{GUILDTAG}&quot; wurde geändert auf:</p>
 <p>{STATUS}</p>
 <p>{COMMENT}</p>
 <p>
