--- a/language/english/email/request_closed.html
+++ b/language/english/email/request_closed.html
@@ -1,5 +1,5 @@
 <p>Hello {USERNAME},</p>
-<p>your appliaction at the EQdkp Plus-System of &quot;{GUILDTAG}&quot; from {DATE} has been closed with the following status:</p>
+<p>your appliaction at the EQdkp Plus-System of "{GUILDTAG}" from {DATE} has been closed with the following status:</p>
 <p>{STATUS}</p>
 <p>
   <br/>
