--- a/language/english/email/request_status_change.html
+++ b/language/english/email/request_status_change.html
@@ -1,5 +1,5 @@
 <p>Hello {USERNAME},</p>
-<p>the status of your application at the EQdkp Plus-System of &quot;{GUILDTAG}&quot; has been changed to:</p>
+<p>the status of your application at the EQdkp Plus-System of "{GUILDTAG}" has been changed to:</p>
 <p>{STATUS}</p>
 <p>{COMMENT}</p>
 <p>
