--- a/language/english/email/request_notification.html
+++ b/language/english/email/request_notification.html
@@ -1,5 +1,5 @@
 <p>Hello {USERNAME},</p>
-<p>{REQUEST_USER} has added a new application to the EQdkp Plus-System of &quot;{GUILDTAG}&quot;.</p>
+<p>{REQUEST_USER} has added a new application to the EQdkp Plus-System of "{GUILDTAG}".</p>
 <p>You can access this appliaction by using the following link:
 <br/>
   <br/>
