--- a/language/english/email/request_viewlink.html
+++ b/language/english/email/request_viewlink.html
@@ -1,5 +1,5 @@
 <p>Hello {USERNAME},</p>
-<p>thanks for your application at the EQdkp-Plus System of &quot;{GUILDTAG}&quot;.</p>
+<p>thanks for your application at the EQdkp-Plus System of "{GUILDTAG}".</p>
 <p>You can access your appliaction by using the following link:
 <br/>
   <br/>
