--- a/language/english/email/request_notification.html
+++ b/language/english/email/request_notification.html
@@ -1,6 +1,6 @@
 <p>Hello {USERNAME},</p>
 <p>{REQUEST_USER} has added a new application to the EQdkp Plus-System of "{GUILDTAG}".</p>
-<p>You can access this appliaction by using the following link:
+<p>You can access this application by using the following link:
 <br/>
   <br/>
   <a href="{U_VIEW}">{U_VIEW}</a><br/>
