--- a/language/english/email/request_viewlink.html
+++ b/language/english/email/request_viewlink.html
@@ -1,6 +1,6 @@
 <p>Hello {USERNAME},</p>
 <p>thanks for your application at the EQdkp-Plus System of "{GUILDTAG}".</p>
-<p>You can access your appliaction by using the following link:
+<p>You can access your application by using the following link:
 <br/>
   <br/>
   <a href="{U_ACTIVATE}">{U_ACTIVATE}</a><br/>
