Change Mail Template if accont is created

--- a/language/german/email/request_closed.html
+++ b/language/german/email/request_closed.html
@@ -1,5 +1,5 @@
 <p>Hallo {USERNAME},</p>
-<p>Deine Bewerbung im EQdkp-System von &quot;{GUILDTAG}&quot; vom {DATE} wurde mit folgendem Status geschlossen:</p>
+<p>Deine Bewerbung im EQdkp Plus-System von &quot;{GUILDTAG}&quot; vom {DATE} wurde mit folgendem Status geschlossen:</p>
 <p>{STATUS}</p>
 <p>
   <br/>
