--- a/language/german/email/request_viewlink.html
+++ b/language/german/email/request_viewlink.html
@@ -1,5 +1,5 @@
 <p>Hallo {USERNAME},</p>
-<p>Danke für Deine Bewerbung im EQdkp-System von &quot;{GUILDTAG}&quot;.</p>
+<p>Danke für Deine Bewerbung im EQdkp Plus-System von &quot;{GUILDTAG}&quot;.</p>
 <p>Du kannst den aktuellen Status deiner Bewerbung unter folgendem Link einsehen:
 <br/>
   <br/>
